--- a/temp_scratch/project.json
+++ b/temp_scratch/project.json
@@ -1,53 +1,1 @@
-{
-  "targets": [
-    {
-      "isStage": true,
-      "name": "Stage",
-      "variables": {},
-      "lists": {},
-      "broadcasts": {},
-      "blocks": {},
-      "currentCostume": 0,
-      "costumes": [],
-      "sounds": [],
-      "volume": 100
-    },
-    {
-      "isStage": false,
-      "name": "Cat",
-      "variables": {},
-      "lists": {},
-      "broadcasts": {},
-      "blocks": {},
-      "currentCostume": 0,
-      "costumes": [
-        {
-          "assetId": "f996b84d5ba4a93f7d31c52e3fd5a3ed",
-          "name": "costume1",
-          "bitmapResolution": 1,
-          "md5ext": "f996b84d5ba4a93f7d31c52e3fd5a3ed.svg",
-          "dataFormat": "svg",
-          "rotationCenterX": 48,
-          "rotationCenterY": 50
-        }
-      ],
-      "sounds": [],
-      "volume": 100,
-      "layerOrder": 1,
-      "visible": true,
-      "x": 0,
-      "y": 0,
-      "size": 100,
-      "direction": 90,
-      "draggable": false,
-      "rotationStyle": "all around"
-    }
-  ],
-  "monitors": [],
-  "extensions": [],
-  "meta": {
-    "semver": "3.0.0",
-    "vm": "0.2.0",
-    "agent": "scratch-coding-ai"
-  }
-}
+{"targets":[{"isStage":true,"name":"Stage","variables":{"`jEk@4|i[#Fk?(8x)AV.-my variable":["変数",0]},"lists":{},"broadcasts":{},"blocks":{},"currentCostume":0,"costumes":[{"name":"背景1","dataFormat":"svg","assetId":"cd21514d0531fdffb22204e0ec5ed84a","md5ext":"cd21514d0531fdffb22204e0ec5ed84a.svg","rotationCenterX":240,"rotationCenterY":180}],"sounds":[{"name":"ポップ","assetId":"83a9787d4cb6f3b7632b4ddfebf74367","dataFormat":"wav","format":"","rate":48000,"sampleCount":1123,"md5ext":"83a9787d4cb6f3b7632b4ddfebf74367.wav"}],"volume":100,"layerOrder":0,"tempo":60,"videoTransparency":50,"videoState":"on","textToSpeechLanguage":null},{"isStage":false,"name":"Cat","variables":{},"lists":{},"broadcasts":{},"blocks":{"030373ca-e3d5-4c9a-875a-415fe9b1b8ad":{"opcode":"looks_say","next":null,"parent":null,"inputs":{"MESSAGE":[1,[10,"こんにちは"]]},"fields":{},"shadow":false,"topLevel":true,"x":100,"y":100}},"currentCostume":0,"costumes":[{"name":"コスチューム1","bitmapResolution":1,"dataFormat":"svg","assetId":"bcf454acf82e4504149f7ffe07081dbc","md5ext":"bcf454acf82e4504149f7ffe07081dbc.svg","rotationCenterX":48,"rotationCenterY":50},{"name":"コスチューム2","bitmapResolution":1,"dataFormat":"svg","assetId":"0fb9be3e8397c983338cb71dc84d0b25","md5ext":"0fb9be3e8397c983338cb71dc84d0b25.svg","rotationCenterX":46,"rotationCenterY":53}],"sounds":[{"name":"ニャー","assetId":"83c36d806dc92327b9e7049a565c6bff","dataFormat":"wav","format":"","rate":48000,"sampleCount":40681,"md5ext":"83c36d806dc92327b9e7049a565c6bff.wav"}],"volume":100,"layerOrder":1,"visible":true,"x":0,"y":0,"size":100,"direction":90,"draggable":false,"rotationStyle":"all around"}],"monitors":[],"extensions":[],"meta":{"semver":"3.0.0","vm":"11.0.0-beta.2","agent":"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/135.0.0.0 Safari/537.36"}}
