--- a/Config/config.json
+++ b/Config/config.json
@@ -5,14 +5,14 @@
   "default_model": "gpt-4",
 
   "_comment_ai": "true なら OpenAI に問い合わせる,false にするとオフラインモード(ask_chatgpt_for_dsl() をスキップ)",
-  "ai_enabled": true,
+  "ai_enabled": false,
 
   "_comment_load": "true なら保存済みファイルから DSL を読み込む（OpenAI に問い合わせない ai_enabled は無視）",
-  "load_response_from_file": false,
+  "load_response_from_file": true,
 
   "_comment_save": "true なら OpenAI の応答をファイルに保存する",
   "save_response_to_file": true,
 
   "_comment_do_compress": "false の場合は zip せずフォルダとして保存されます",
-  "do_compress": false
+  "do_compress": true
 }
